SubBt/force-app/main/default/objects/Service_Request__c/Service_Request__c.object-meta.xml
<CustomObject>
    <description>BT Service 360 Service Request.</description>
    <label>Service Request</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>SR #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>