SubBt/force-app/main/default/objects/Service_Request__c/fields/Customer_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address__c</fullName>
    <formula>Address__c +&quot; , &quot;+City__c+&quot; , &quot; + State__c  + &quot; , &quot; + Country__c +&quot; , &quot;+  Postal_Code__c</formula>
    <label>Customer Address</label>
    <type>Text</type>
</CustomField>