SubBt/force-app/main/default/objects/Service_Request__c/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <formula>Customer_Name__r.Email</formula>
    <label>Customer Email</label>
    <type>Text</type>
</CustomField>