SubBt/force-app/main/default/objects/Service_Request__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is to identify the customer for whom the service request is being created.</description>
    <label>Customer Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Service_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>