SubBt/force-app/main/default/objects/Service_Request__c/fields/Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone__c</fullName>
    <formula>Customer_Name__r.Phone</formula>
    <label>Customer Phone</label>
    <type>Text</type>
</CustomField>