SubBt/force-app/main/default/objects/Service_Request__c/fields/Estimate__c.field-meta.xml
<CustomField>
    <fullName>Estimate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store the estimate record type records in work order. When estimate get approved at that time system will create new work order with this estimates.</description>
    <label>Estimate</label>
    <referenceTo>Service_Request__c</referenceTo>
    <relationshipName>Service_Estimates</relationshipName>
    <type>Lookup</type>
</CustomField>