SubBt/force-app/main/default/objects/Service_Request__c/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <description>Sum of product costs.</description>
    <label>Grand Total</label>
    <summarizedField>Product__c.Total_Cost__c</summarizedField>
    <summaryForeignKey>Product__c.Service_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>