SubBt/force-app/main/default/objects/Service_Request__c/fields/Preferred_Date_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Date_of_Service__c</fullName>
    <description>Date/time The Service Request has been scheduled.</description>
    <inlineHelpText>Date/time The Service Request has been scheduled.</inlineHelpText>
    <label>Date of Service</label>
    <type>DateTime</type>
</CustomField>