SubBt/force-app/main/default/objects/Service_Request__c/fields/Primary_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Primary_Assignee__c</fullName>
    <description>This field is used to track Service Request Assignee History</description>
    <inlineHelpText>Internal Resource that is associated with this Service Request.</inlineHelpText>
    <label>Primary Assignee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>