SubBt/force-app/main/default/objects/Service_Request__c/fields/Primary_Count__c.field-meta.xml
<CustomField>
    <fullName>Primary_Count__c</fullName>
    <label>Primary Count</label>
    <summaryFilterItems>
        <field>Service_Request_Assignee__c.Primary__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Service_Request_Assignee__c.Service_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>