SubBt/force-app/main/default/objects/Service_Request__c/fields/Referral_Name__c.field-meta.xml
<CustomField>
    <fullName>Referral_Name__c</fullName>
    <formula>Customer_Name__r.Referral_Name__c</formula>
    <label>Referral Name</label>
    <type>Text</type>
</CustomField>