SubBt/force-app/main/default/objects/Service_Request__c/fields/Requested_date_of_service__c.field-meta.xml
<CustomField>
    <fullName>Requested_date_of_service__c</fullName>
    <inlineHelpText>Date the Customer requested the Service to be performed.</inlineHelpText>
    <label>Requested Date of Service</label>
    <type>DateTime</type>
</CustomField>