SubBt/force-app/main/default/objects/Service_Request__c/fields/Service_Description__c.field-meta.xml
<CustomField>
    <fullName>Service_Description__c</fullName>
    <label>Service Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>