SubBt/force-app/main/default/objects/Service_Request__c/fields/Service_Request_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Name__c</fullName>
    <label>Service Request Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>