SubBt/force-app/main/default/objects/Service_Request__c/recordTypes/Estimate.recordType-meta.xml
<RecordType>
    <fullName>Estimate</fullName>
    <active>true</active>
    <description>Record type for the Service Estimate</description>
    <label>Estimate</label>
</RecordType>