SubBt/force-app/main/default/objects/Service_Request__c/recordTypes/Work_Order.recordType-meta.xml
<RecordType>
    <fullName>Work_Order</fullName>
    <active>true</active>
    <description>Record type for the Service Work Order</description>
    <label>Work Order</label>
</RecordType>