SubBt/force-app/main/default/objects/Service_Request__c/validationRules/Creating_Service_Request_From_Warranty.validationRule-meta.xml
<ValidationRule>
    <fullName>Creating_Service_Request_From_Warranty</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL(Request_Status__c,&apos;New&apos;), 
ISBLANK( Warranty_Item__r.Contractor_Resource__c ))</errorConditionFormula>
    <errorMessage>Contractor Resource cannot be blank</errorMessage>
</ValidationRule>