SubBt/force-app/main/default/objects/Service_Request__c/validationRules/Customer_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Name_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Customer_Name__c)</errorConditionFormula>
    <errorDisplayField>Customer_Name__c</errorDisplayField>
    <errorMessage>You must enter a value.</errorMessage>
</ValidationRule>