SubBt/force-app/main/default/objects/Service_Request__c/validationRules/Prevent_Complete_On_New_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Complete_On_New_Record</fullName>
    <active>true</active>
    <description>Service Request can not be created as Complete</description>
    <errorConditionFormula>AND(
ISNEW(),
ISPICKVAL(Request_Status__c,&quot;Complete&quot;)
)</errorConditionFormula>
    <errorDisplayField>Request_Status__c</errorDisplayField>
    <errorMessage>You cannot create a service request with status as &quot;Complete&quot;.</errorMessage>
</ValidationRule>