SubBt/force-app/main/default/objects/Service_Request__c/validationRules/Prevent_Past_Date_in_Date_Of_Service.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Past_Date_in_Date_Of_Service</fullName>
    <active>false</active>
    <errorConditionFormula>DATETIMEVALUE(Preferred_Date_of_Service__c)  &lt;  NOW()</errorConditionFormula>
    <errorDisplayField>Preferred_Date_of_Service__c</errorDisplayField>
    <errorMessage>You must select the future date.</errorMessage>
</ValidationRule>