SubBt/force-app/main/default/objects/Service_Request__c/validationRules/Service_Request_Subject_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Request_Subject_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISBLANK(Subject__c),
ISNULL(Subject__c)
)</errorConditionFormula>
    <errorDisplayField>Subject__c</errorDisplayField>
    <errorMessage>You must enter a value.</errorMessage>
</ValidationRule>