SubBt/force-app/main/default/objects/Service_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Request_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Preferred_Date_of_Service__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Customer_Phone__c</columns>
    <columns>Grand_Total__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>